crates/snapshot-tests/tests/snapshots/parser__bad_strings__unterminated_literal.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnterminatedString]: unterminated literal string, expected `'` at `foo`
  ┌─ unterminated_literal:1:8
  │
1 │ foo = '
  │        ^ expected `'`


error: unterminated literal string, expected `'` at `foo`
 --> unterminated_literal:1:8
  |
1 | foo = '
  |        ^ expected `'`
Error {
    kind: "UnterminatedString",
    message: "unterminated literal string, expected `'`",
    span: 7..7,
    path: Some(
        "foo",
    ),
}
